--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: interunesp_war
-description: Uma aplicação para unespiano se divertir.
+name: inter_war
+description: Uma aplicação para iano se divertir.
 
 publish_to: 'none'
 
