--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
-project(interunesp_war LANGUAGES CXX)
+project(inter_war LANGUAGES CXX)
 
-set(BINARY_NAME "interunesp_war")
+set(BINARY_NAME "inter_war")
 
 cmake_policy(SET CMP0063 NEW)
 
