:sparkles: add: home

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,7 +1,7 @@
 include: package:flutter_lints/flutter.yaml
 
 analyzer:
-  exclude: ["build/**", "**/*.g.*"]
+  exclude: ["build/**"]
   errors:
     todo: ignore
 linter:
